--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -3,25 +3,12 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
+  --background: 0 0% 6%;
+  --text: 210 6% 93%;
+  --text-secondary: 0 0% 43%;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  --card-art: 190 97% 76%;
+  --card-geo: 28 87% 76%;
+  --card-bio: 326 69% 80%;
+  --card-soc: 286 87% 76%;
 }
