feat: create button

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,6 +6,7 @@
   --background: 0 0% 6%;
   --text: 210 6% 93%;
   --text-secondary: 0 0% 43%;
+  --button: 66 100% 55%;
 
   --card-art: 190 95% 39%;
   --card-geo: 28 77% 43%;
