--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -7,6 +7,7 @@
   --text: 210 6% 93%;
   --text-secondary: 0 0% 43%;
   --button: 66 100% 55%;
+  --border: 0 0% 26%;
 
   --card-art: 190 95% 39%;
   --card-geo: 28 77% 43%;
