--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -13,4 +13,8 @@
   --card-geo: 28 77% 43%;
   --card-bio: 326 58% 53%;
   --card-soc: 286 77% 43%;
+
+  --low: 356 100% 67%;
+  --average: 60 100% 80%;
+  --high: 119 100% 50%;
 }
