--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -6,6 +6,7 @@
   --background: 0 0% 6%;
   --text: 210 6% 93%;
   --text-secondary: 0 0% 43%;
+  --text-black: 0 0% 0%;
   --button: 66 100% 55%;
   --border: 0 0% 26%;
 
